--- a/index.html
+++ b/index.html
@@ -7,12 +7,19 @@
     <title>Магазин пончиков</title>
 </head>
 <style>
+body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h1 {
+    color:red;
+}
 /* Стили пиши здесь :) */
-
-
 </style>
 <body>
-<h1 style="color:red">Мир пончиков</h1>
+<h1>Мир пончиков</h1>
 <img src="/uploads/2023/02/donut.png">
 </body>
 </html>
